# Total-solutions-enterprises

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/infrastructure/: __init__.py  database.py  models.py
backend/app/modules/: __init__.py
backend/app/presentation/: __init__.py
backend/app/shared/: __init__.py  config.py  http_security.py
backend/evaluations/: model_registry.json  parking_assistant_v1.json
backend/integration_tests/: test_postgres_identity.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_identity_schema.py  0002_parking_zones.py  0003_parking_zone_classification.py  0004_community_reports.py  0005_admin_mfa.py  0006_admin_audit_chain.py  0007_notifications.py  0008_parking_facilities.py  0009_distributed_login_rate_limit.py  0010_expand_mfa_secret.py  0012_privacy_rights.py  (+3 more)
backend/tests/: test_abuse.py  test_admin_audit.py  test_admin_mfa.py  test_auth.py  test_authorization.py  test_billing.py  test_community_media.py  test_community_reports.py  test_health.py  test_ingestion.py  test_notifications.py  test_observability.py  test_parking_ai.py  test_parking_ai_evaluation.py  test_parking_ai_safety_invariants.py  test_parking_map.py  test_parking_recommendations.py  test_preventive_notifications.py  test_privacy.py  test_production_configuration.py  test_sign_scanner.py  test_sql_repositories.py  test_system_qualification.py  test_towing_recovery.py
(+251 files in other folders)
