[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "parkshield-api"
version = "0.1.0"
description = "ParkShield AI backend API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiosmtplib>=3.0,<6.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "boto3>=1.35,<2.0",
  "cryptography>=48.0.1,<50.0",
  "fastapi>=0.115,<1.0",
  "geoalchemy2>=0.15,<1.0",
  "httpx>=0.27,<1.0",
  "pillow>=11.0,<13.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "pytesseract>=0.3.13,<1.0",
  "PyJWT>=2.9,<3.0",
  "python-multipart>=0.0.18,<1.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8,<2.0",
  "mypy>=1.11,<2.0",
  "pip-audit>=2.7,<3.0",
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
